changing some styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="./images/mytree.jpeg" alt="A kitten standing" class="kittenImages" id="headerImage">
     </header>
     <main>
-        <div>
+        <div class="thingsI">
             <section id="things-I-love">
                 <h3 class="sub-header">Things I love to do:</h3>
                 <ul>
